--- a/css/site.css
+++ b/css/site.css
@@ -374,7 +374,6 @@ select{
     .selection-wrapper,
     .radio-input{
         flex: 1;
-        gap: 1em;
     }
 
     .radio-input-wrapper{
